# PNG-Decoder-in-C

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  build.bat  conanfile.txt  debug_file.txt  image_to_supported_png.py  pngdecode.c
include/: console_utilities.h  pngdecode.h  ximer_pngdecode.h  ximer_pngrecostruct.h
lib/: CMakeLists.txt
resources/: basn6a08.png.bak
src/: example.c  main.c  pngdecode.c  ximer_pngdecode.c  ximer_pngrecostruct.c
